k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wulims
  namespace: wulims
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wulims
  template:
    metadata:
      labels:
        app: wulims
    spec:
      imagePullSecrets:
        - name: ghcr-pull
      containers:
        - name: wulims
          image: ghcr.io/walsh-university/wulims:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthz/
              port: 8000
              httpHeaders:
                - name: Host
                  value: lims-lab.programminggoody.com
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /healthz/
              port: 8000
              httpHeaders:
                - name: Host
                  value: lims-lab.programminggoody.com
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
