k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wulims
  namespace: wulims
spec:
  selector:
    app: wulims
  ports:
    - name: http
      port: 80
      targetPort: 8000
